# side

./: README.md
cpp/alpha/: main.cpp
cpp/beta/: CMakeLists.txt  main.cpp
cpp/delta/: CMakeLists.txt  main.cpp
cpp/epsilon/: CMakeLists.txt  days.cpp  days.h  main.cpp
cpp/gamma/: CMakeLists.txt  FoodFactory.cpp  FoodFactory.h  Fried.cpp  Fried.h  Soup.cpp  Soup.h  main.cpp
cpp/luckyString/: CMakeLists.txt  main.cpp
cs/IsLeapYear/: Program.cs
cs/Switch/: Program.cs
cs/alpha/: Program.cs
cs/beta/: Program.cs
cs/gamma/: Program.cs
cs/ifElse/: Program.cs
cs/nestedLoop/: Program.cs
cs/readKey/: Program.cs
haskell/: a.hs
interview/codium/: cross.py  diamond.py  doormat.py  else_vs_finally_clause.md  fizzbuzz.py  leapyear.py  prime.py  rtriangle.py  star3.3.py  todo.py  triangle.py
interview/codium/redis-docker/: README.md  docker-compose.yml  todo.py
interview/itax/: t.py
interview/lmwn/frontend-assignment/api-gateway/: Cargo.toml  README.md
interview/lmwn/frontend-assignment/api-gateway/src/: main.rs
interview/lmwn/frontend-assignment/web/: .env  package.json  tsconfig.json
interview/lmwn/frontend-assignment/web/src/: App.css  App.test.tsx  App.tsx  config.ts  types.ts  typings.d.ts
python/: fibo.py  prime.py
rust/: Cargo.toml
rust/assembly-line/.exercism/: metadata.json
rust/assembly-line/src/: lib.rs
rust/asyncio/src/: main.rs
rust/grrs/: Cargo.toml
rust/grrs/src/: main.rs
rust/lucians-luscious-lasagna/.exercism/: metadata.json
rust/lucians-luscious-lasagna/src/: lib.rs
(+23 files in other folders)
