[package]
name = "api-gateway"
version = "0.1.0"
authors = ["Aphimuk Yimsukpaitoon <luroman6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-cors = "0.5.4"
serde = "1.0.115"
serde-aux = "1.0.1"
reqwest = { version = "0.10.7", default-features = false, features = [ "json", "rustls-tls" ] }
validator = "0.12.0"
tokio = "0.2.22"
log = "0.4.0"
env_logger = "0.8.3"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.61"
